--- a/main.css
+++ b/main.css
@@ -14,10 +14,42 @@ body {
     margin-right: auto;
     font-family: "baskerville"
 }
+
+.grid-container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 300px 300px;
+    background-color: none;
+    padding: 10px;
+}
+
+.grid-item {
+    
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 6px solid white;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+}
+.img1 {
+    background-image: url(images/prideandpred.jpg);
+    background-position: center;
+    background-size: cover
+}
+
 .wrapper {
     display: grid;
     grid-template-columns: repeat(4, [col] 1fr);
-    grid-template-rows: repeat(3, [col] 1fr);
+    grid-template-rows: repeat(3, [row] 1fr);
+    background-color: none;
+    color: none;
+    padding: 0px;
+}
+.wrapper_work {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 1fr auto 1fr;
     background-color: none;
     color: none;
     padding: 0px;
@@ -71,7 +103,7 @@ a {
     width: 100%;
     line-height: 12pt;
     font-size: 10pt;
-    font-family: "gotham", sans-serif
+    font-family: "gotham", sans-serif;
 }
 .footer {
     position: fixed;
@@ -79,20 +111,15 @@ a {
     bottom: 0;
 }
 .content {
-    grid-column: col /span 3;
-    grid-row: 4;
+    grid-column: 1/5;
+    grid-row: 2;
+}
+.content_work { 
+    grid-column: 2/4;
+    grid-row: 1;
     padding: 30px;
 }
 .content img {
-    width: 100%;
-    margin-bottom: 30px;
-}
-.content_about {
-    grid-column: col /span 4;
-    grid-row: 4;
-    padding: 30px;
-}
-.content_about img {
     width: 100%;
     margin-bottom: 30px;
 }
@@ -100,51 +127,6 @@ a {
     grid-column: 4;
     grid-row: 4;
     padding: 10px;
-}
-.content_volunteer {
-    grid-column: col /span 3;
-    grid-row: 3;
-    padding: 30px;
-}
-.sidebar_volunteer {
-    grid-column: 4;
-    grid-row: 3;
-    padding: 10px;
-    background-color: #ccc;
-}
-.sidebar_volunteer img {
-    width: 100%
-}
-.content_dogs {
-    grid-column: col /span 4;
-    grid-row: 3;
-    padding: 30px;
-}
-.sidebar_dogs {
-    grid-column: 4;
-    grid-row: 3;
-    padding: 10px;
-    background-color: #ccc;
-}
-.content_newsletter {
-    grid-column: 1;
-    grid-row: 3;
-    padding: 30px;
-}
-.content_newsletter img {
-    width: 100%;
-    object-fit: cover;
-    padding-bottom: 40px;
-}
-.sidebar_newsletter {
-    grid-column: 2/ span 4;
-    grid-row: 3;
-    padding: 10px;
-    background-color: #ccc; 
-}
-.sidebar_newsletter img {
-    width: 100%;
-    object-fit: cover;
 }
 .content_contact {
     grid-column: col /span 3;
