--- a/main.css
+++ b/main.css
@@ -2,12 +2,22 @@
 html {
     height: 100%;
 }
-body { 
+.body1 { 
     padding: 0px;
+    background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)),url("images/transistor.jpg") no-repeat top center fixed;
+    background-size: cover;
+}
+.body2 { 
+    padding: 0px;
+    color: white;
+    background-color: black;
+}
+.body3 { 
+    padding: 0px;
+    color: white;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("images/transistor.jpg") no-repeat center center fixed;
     background-size: cover;
 }
-
 .margins {
     width: 800px;
     margin-left: auto;
@@ -15,53 +25,22 @@ body {
     font-family: "baskerville"
 }
 
-.grid-container {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 300px 300px;
-    grid-template-rows: 300px 300px;
-    background-color: none;
-    padding: 10px;
-}
-
-.grid-item {
-    
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 6px solid white;
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-}
-.img1 {
-    background-image: url(images/prideandpred.jpg);
-    background-position: center;
-    background-size: cover
-}
-
 .wrapper {
     display: grid;
     grid-template-columns: repeat(4, [col] 1fr);
-    grid-template-rows: repeat(3, [row] 1fr);
-    background-color: none;
-    color: none;
-    padding: 0px;
-}
-.wrapper_work {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 1fr auto 1fr;
+    grid-template-rows: repeat(10, [auto] 1fr);
     background-color: none;
     color: none;
     padding: 0px;
 }
 .box {
-    padding: 5px;
+    padding: 0px;
 }
 .a {
     padding: 0px;
     padding-top: 5px;
-    grid-column: 1;
-    grid-row: 1;
+    grid-column: 1/3;
+    grid-row: ;
     font-family: "gotham bold", sans-serif;
 }
 .menu {
@@ -72,6 +51,12 @@ body {
     font-family: sans-serif;
 }
 .header {
+    background-color: none;
+    position: sticky;
+    top: 0;
+}
+.header_inspo {
+    background-color: black;
     position: sticky;
     top: 0;
 }
@@ -90,48 +75,89 @@ body {
     transform: translate(-50%, -50%);
     color: white;
 }
-
-a {
-    color: #048fa3;
-}
-
 .d {
     background-color: none;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
     line-height: 12pt;
     font-size: 10pt;
-    font-family: "gotham", sans-serif;
+    font-family: sans-serif;
+    position: fixed;
+    left: 0px;
+    bottom: 0;
 }
-.footer {
+.d_work {
+    background-color: #720601;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    width: 800px;
+    line-height: 12pt;
+    font-size: 10pt;
+    font-family: sans-serif;
+    position: fixed;
+    bottom: 0px;
+}
+.d_about {
+    background-color: none;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    line-height: 12pt;
+    font-size: 10pt;
+    font-family: sans-serif;
     position: fixed;
     left: -8px;
     bottom: 0;
 }
-.content {
+.d_inspo {
     grid-column: 1/5;
-    grid-row: 2;
+    grid-row: 11;
+    position: static;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #720601;
+    color: #fff;
+    text-align: center;
+    line-height: 18pt;
+    font-size: 10pt;
+    font-family: sans-serif;
 }
-.content_work { 
+img {
+    height: auto;
+    width: 400px;
+}
+.content_inspo {
     grid-column: 2/4;
-    grid-row: 1;
-    padding: 30px;
+    grid-row: 2/11;
 }
-.content img {
-    width: 100%;
-    margin-bottom: 30px;
+.content_about {
+    text-align: left;
+    grid-column: 3/5;
+    grid-row: 2/10;
 }
 .sidebar {
-    grid-column: 4;
-    grid-row: 4;
-    padding: 10px;
+    margin-top: 0px;
+    margin-left: 40px;
+    margin-right: 40px;
+    grid-column: 1/3;
+    grid-row: 2/10;
+    padding: 0px;
+}
+
+.sidebar img{
+    width: 98%;
+    position: sticky;
 }
 .content_contact {
     grid-column: col /span 3;
     grid-row: 3;
-    padding: 30px;
+    padding: 0px;
 }
 .sidebar_contact {
     grid-column: 4;
@@ -139,6 +165,7 @@ a {
     padding: 10px;
     background-color: #ccc;
 }
+
 /* Navigation */
 
 .menu ul {
@@ -156,28 +183,103 @@ a {
 .menu li a {
     text-decoration: none;
     color: white;	
-    font-family: "gotham", sans-serif;
+    font-family: sans-serif;
 }
 .menu li:hover {
-    background-color: #048fa3;
+    background-color: darkgrey;
 }
 .menu .active {
     background-color: #048fa3;
     
 }
 
+/* Work Grid */
+
+.grid-container {
+    text-align: center;
+    position: absolute;
+    top: 51%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 275px 275px;
+    grid-template-rows: 275px 275px;
+    background-color: none;
+    padding: 10px;
+    z-index: 12;
+}
+
+.img1 {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 6px solid white;
+    background-image: url(images/prideandpred.jpg);
+    background-position: top;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+.img2 {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 6px solid white;
+    background-image: url(images/EndEnd%20Project.jpg);
+    background-position: top;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+.img3 {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 6px solid white;
+    background-image: url(images/semifinaldraft.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+.img4 {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 6px solid white;
+    height: 100%;
+    width: 100%;
+}
+
 /* Content Styles */
 
+a {
+    color: #048fa3;
+}
+p1 {
+    font-family: "gotham", sans-serif;   
+}
+p2 {
+    font-family: "helvetica"; 
+    line-height: 15pt;
+    font-size: 14px;
+}
 h1 {
     color: white;
     font-size: 40pt;
     margin-top: 20px;
     margin-bottom: 20px;
-    text-align: auto;
+    text-align: center;
     font-family: "gotham bold", sans-serif;
 }
 h2 {
-    color: #3399cc;
+    color: #048fa3;
+    text-align: center;
     font-size: 21pt;
     font-family: "gotham", sans-serif;
 }
@@ -193,9 +295,21 @@ h4 {
     font-size: 20pt;
 }
 h5 {
-    color: ;
-    font-size: 14pt;
+    color: white;
+    font-size: 40pt;
+    margin-bottom: 20px;
+    margin-top: 40px;
+    text-align: left;
+    font-family: "gotham bold", sans-serif;
 }
+h6 {
+    color: #048fa3;
+    text-align: left;
+    margin-bottom: 1px;
+    font-size: 18pt;
+    font-family: "gotham", sans-serif;
+}
+
 .slash {
     padding-left: 10px;
     padding-right: 10px;
