--- a/main.css
+++ b/main.css
@@ -252,8 +252,15 @@ img {
 .img4 {
     background-color: rgba(255, 255, 255, 0.8);
     border: 6px solid white;
+    background-image: url(images/insane.jpg);
+    background-position: center;
+    background-size: cover;
     height: 100%;
     width: 100%;
+    display: block;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
 }
 
 /* Content Styles */
